Module5/lesson15/allaccess.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: allaccess
  name: allaccess
spec:
  serviceAccountName: allaccess
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    name: allaccess
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
