Module5/lesson15/livenesstest.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: livenesstest
  name: livenesstest
spec:
  containers:
  - image: nginx
    name: livenesstest
    resources: {}
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
