Module5/lesson15/pv.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: 1311-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: 1311-pvc
  containers:
    - name: task-pv-container
      image: nginx
      volumeMounts:
        - mountPath: "/webdata"
          name: task-pv-storage
