Module5/lesson15/restrictginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: restrictginx
  name: restrictginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: restrictginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: restrictginx
    spec:
      containers:
      - image: nginx
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "256Mi"
        name: nginx
        resources: {}
status: {}
