Module5/lesson15/secretapp_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: secretapp
  name: secretapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secretapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: secretapp
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
