Module5/lesson15/sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: busyboxcontainer
    image: busybox:1.28
    command: [ "sh", "-c", "while [ true ]; do date; sleep 5; done | tee -a /var/log/date.log" ]
    volumeMounts:
    - name: data
      mountPath: /var/log
  restartPolicy: Never
  volumes:
  - name: data 
    hostPath:
      path: /var/log/mypod
