Module5/lesson15/sleepybox.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sleepybox
  name: sleepybox
spec:
  securityContext:
    fsGroup: 2000 
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    name: sleepybox
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
